--- a/tablet.css
+++ b/tablet.css
@@ -1,5 +1,31 @@
 @media screen and (max-width: 520px){ 
 
+    .header-res{
+        height:60px;
+        width:100%;
+        position:relative;
+        z-index: 2;
+        background-color: white;
+        opacity: 0.3;
+    }
+    .header-res-container{ 
+        width:90%;
+        margin:0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .fa-coffee{
+        font-size:2.5rem;
+        line-height: 60px;
+    }
+    .header-res-container{
+        line-height:60px;
+    }
+    .fa-bars{
+        font-size:2.5rem;
+        line-height:60px;
+    }
     main{
         height:100%;
     }
@@ -21,7 +47,7 @@
 
     .button{
         border-color: white;
-       font-family: sans-serif;
+        font-family: sans-serif;
     }
 
    
@@ -31,13 +57,31 @@
     header{
         display: none;
     }
+
+    footer{
+        width: 100%;
+        height:70px;
+        background-color:black;
+        color:white;
+        position: relative;
+    top: 12px;
+    line-height: 60px;
+    text-align: center;
+    font-size:0.7rem;
+    }
 }
 
 @media screen and (min-width: 1020px){
+    .header-res{
+        display:none;
+    }
     .button a{
         transition: 0.5s;
     }
     .button a:hover{
         color:gray;
+    }
+    footer{
+        display: none;
     }
 }
